Created separate files for extracted logic from UnityLauncher; code needs further refactoring